--- a/iOS/AgoraEntScenarios/Resource/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Resource/zh-Hans.lproj/Localizable.strings
@@ -16,25 +16,34 @@
 "app_my_account"="我的账号";
 "app_user_agreement"="用户协议";
 "app_privacy_agreement"="隐私政策";
+"app_user_info_desc" = "声动互娱软件是一款用于向声网客户展示产品使用效果的测试产品，仅用于测试产品的功能、性能和可用性，而非提供给大众使用的正式产品。\n\n 1.我们将依据《用户协议》及《隐私政策》来帮助您了解我们在收集、使用、存储您个人信息的情况以及您享有的相关权利。\n 2.在您使用本测试软件时，我们将收集您的设备信息、日志信息等，同时根据不同使用场景，你可以授予我们获取您设备的麦克风权限、摄像头权限等信息。\n\n您可通过阅读完整的《用户协议》及《隐私政策》来了解详细信息。\n\n";
+"app_user_info_tips" = "提示您注意：当您点击“同意”时，视为您已阅读并愿意接受《用户协议》和《隐私政策》的所有内容。当您点击“不同意”时，将无法体验声动互娱的完整功能。";
+"app_user_info_choice_agree_tips" = "选择“同意”，体验声动互娱完整功能";
+"app_login_guide_privacy_tips" = "《用户协议》和《隐私政策》";
+"app_login_guide_agree_tips" = "请同意用户协议和隐私政策";
 "app_personal_info_collection_checklist"="个人信息收集清单";
 "app_third_party_info_data_sharing"="第三方信息数据共享";
-"app_and"="及";
 
-"app_confirm_deletion"="确认删除？";
+"app_login_guide_title1" = "声动语聊";
+"app_login_guide_desc1" = "搭载声网最佳音效实践、最新音频技术的语聊房 带来更沉浸、更易用、更有趣的语聊体验";
+"app_login_guide_title2" = "在线K歌房";
+"app_login_guide_desc2" = "一站式接入 20W+ 正版 K 歌热门曲库，灵活接入各类娱乐社交场景，激活多样 K 歌互动玩法";
+"app_login_guide_title3" = "直播超级画质";
+"app_login_guide_desc3" = "视频『高清』升级，人更美、物更真，体验更流畅，为直播变现增添更多 buff";
+
 "app_about_us"="关于我们";
 "app_submit_feedback" = "提交反馈";
 
 "app_please_input_account"="请输入手机号";
-"app_error_pwd_tip"="8~20个字符，包含大、小写字母和数字";
-"app_please_input_pwd"="请输入密码";
-"app_please_input_v_code"="请输入验证码";
-"app_forget_password"="忘记密码";
+"app_login_get_verify_code" = "获取验证码";
+"app_login_verify_code_retry" = "重新获取验证码";
+"app_please_input_v_code"="输入验证码";
+"app_login_verify_code_error" = "验证码输入错误";
+"app_login_verify_code_send" = "已发送验证码至";
 "app_login"="登录";
-"app_finish"="完成";
-"app_register_account"="注册账号";
-"app_welcome_experience"="欢迎体验声网服务";
+"app_register_account"="注册/登录";
+"app_register_account_tips" = "若手机号未注册，登录后会自动注册。";
 "app_mobile_number"="手机号";
-"app_v_code"="验证码";
 
 "app_plus_86"="+86";
 "app_logout"="退出登录";
