--- a/Android/scenes/voice_spatial/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/voice_spatial/src/main/res/values-zh/strings.xml
@@ -3,7 +3,7 @@
     <string name="voice_app_name">声网语聊房</string>
     <string name="voice_app_agora_chatroom">声网语聊房</string>
     <string name="voice_app_agora_chatroom_copy_right">Powered by Agora.io</string>
-    <string name="voice_room_list_title_name">声网语聊房</string>
+    <string name="voice_room_list_title_name">语聊房</string>
     <string name="voice_spatial_room_list_title_name">空间音频语聊房</string>
     <string name="voice_tab_layout_all">全部</string>
     <string name="voice_tab_layout_chat_room">语聊房</string>
