--- a/Android/scenes/voice_spatial/src/main/res/values/strings.xml
+++ b/Android/scenes/voice_spatial/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="voice_app_name">Agora Chat Room</string>
     <string name="voice_app_agora_chatroom">Agora Chat Room</string>
     <string name="voice_app_agora_chatroom_copy_right">Powered by Agora.io</string>
-    <string name="voice_room_list_title_name">Agora Chat Room</string>
+    <string name="voice_room_list_title_name">Chat Room</string>
     <string name="voice_spatial_room_list_title_name">Spatial Audio Mode Room</string>
     <string name="voice_tab_layout_all">All</string>
     <string name="voice_tab_layout_chat_room">Chat Room</string>
