--- a/Android/scenes/show/src/main/res/values/strings.xml
+++ b/Android/scenes/show/src/main/res/values/strings.xml
@@ -149,6 +149,7 @@
     <string name="show_empty_online_boardcaster">暂无在线主播</string>
     <string name="show_empty_online_audience">暂无在线观众</string>
     <string name="show_pk">连线互动</string>
+    <string name="show_pk_dialog_header">对主播%s</string>
     <string name="show_can_pk">可邀请PK</string>
 
     <string name="show_cannot_accept">正在互动， 请互动结束后再接受连麦申请</string>
@@ -159,7 +160,7 @@
     <string name="show_count_time_for_pk">PK 0%s:%s</string>
     <string name="show_pk_is_stopped">PK已断开哦</string>
     <string name="show_content">监测到当前内容存在违规行为</string>
-
+    <string name="show_come_soon">Hi，我暂时有事，很快回来…</string>
 
 
     <string name="show_setting_preset">预设</string>
