--- a/Android/scenes/voice/src/main/res/values/strings.xml
+++ b/Android/scenes/voice/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="voice_room_tab_layout_count">(%1$s)</string>
     <string name="voice_room_online_count">%d在线</string>
     <string name="voice_room_click_count">%d观看</string>
+    <string name="voice_room_mic_number">%d号麦</string>
     <string name="voice_room_profile_update_name_fail">Change Failed</string>
     <string name="voice_room_profile_update_name_suc">Change Success</string>
     <string name="voice_empty_invite_hands">No audience yet</string>
