--- a/Android/scenes/voice_spatial/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/voice_spatial/src/main/res/values-zh/strings.xml
@@ -34,6 +34,8 @@
     <string name="voice_room_list_item_enter">进入</string>
     <string name="voice_room_list_count">%1$s</string>
     <string name="voice_room_tab_layout_count">(%1$s)</string>
+    <string name="voice_room_online_count">%d在线</string>
+    <string name="voice_room_click_count">%d观看</string>
     <string name="voice_room_profile_update_name_fail">修改失败</string>
     <string name="voice_room_profile_update_name_suc">修改成功</string>
     <string name="voice_empty_invite_hands">暂无听众</string>
