--- a/Android/scenes/voice_spatial/src/main/res/values/strings.xml
+++ b/Android/scenes/voice_spatial/src/main/res/values/strings.xml
@@ -34,6 +34,8 @@
     <string name="voice_room_list_item_enter">Enter</string>
     <string name="voice_room_list_count">%1$s</string>
     <string name="voice_room_tab_layout_count">(%1$s)</string>
+    <string name="voice_room_online_count">%d在线</string>
+    <string name="voice_room_click_count">%d观看</string>
     <string name="voice_room_profile_update_name_fail">Change Failed</string>
     <string name="voice_room_profile_update_name_suc">Change Success</string>
     <string name="voice_empty_invite_hands">No audience yet</string>
