--- a/iOS/AgoraEntScenarios/Scenes/Pure1v1/Pure1v1/Resources/Pure1v1.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/Pure1v1/Pure1v1/Resources/Pure1v1.bundle/en.lproj/Localizable.strings
@@ -13,7 +13,7 @@
 "authorized_cancel"="取消";
 
 "user_list_title"="1v1私密房";
-"user_list_waitting"="等待其他用户";
+"user_list_waitting"="等待其他用户入场";
 "user_list_nodata_tips"="欢迎来到声网1V1私密房，目前暂无其它用户入场，你可邀约朋友入场体验。";
 "user_list_refresh_tips"="用户列表已刷新";
 "user_list_cell_local_user"="本人信息";
