--- a/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/en.lproj/Localizable.strings
@@ -18,7 +18,7 @@
 "call_not_init"="网络异常";
 "call_state_connecting"="连接中";
 "call_broadcaster_private"="Call privately";
-"user_list_waitting"="暂无主播在线，你来创建一个吧！";
+"user_list_waitting"="暂无主播在线";
 "user_list_create_room"="创建房间";
 "user_list_create"="创建";
 "user_list_creating"="创建中";
