--- a/Android/scenes/ktv/src/main/res/values/strings.xml
+++ b/Android/scenes/ktv/src/main/res/values/strings.xml
@@ -119,6 +119,7 @@
     <string name="ktv_low_latency">低延迟模式</string>
     <string name="ktv_AIAEC_switcher">AIAEC 开关（beta）</string>
     <string name="ktv_AIAEC_strength">AIAEC 强度选择（beta）</string>
+    <string name="ktv_seat_num">%s号麦</string>
 
     <!--    Content Description-->
     <string name="ktv_toggle_mic">麦克风启用或静音</string>
@@ -143,10 +144,10 @@
     <string name="ktv_skip_prelude">跳过前奏</string>
     <string name="ktv_skip_postlude">跳过尾奏</string>
     <string name="ktv_onseat_toast">加入合唱前，您需要先上麦</string>
-    <string name="ktv_load_failed_no_song">"加载失败，当前已无歌曲"</string>
-    <string name="ktv_load_failed">歌曲加载失败</string>
+    <string name="ktv_load_failed_no_song">"歌曲下载失败，当前已无歌曲"</string>
+    <string name="ktv_load_failed">歌曲下载失败</string>
     <string name="ktv_try">已尝试三次，请自动切歌</string>
-    <string name="ktv_load_failed_another_song">"加载失败，当前已切换到另一首歌"</string>
+    <string name="ktv_load_failed_another_song">"歌曲下载失败，当前已切换到另一首歌"</string>
     <string name="ktv_too_fast">操作太频繁</string>
     <string name="ktv_lrc_failed">歌词加载失败</string>
     <string name="ktv_retry">点击重试</string>
@@ -180,5 +181,12 @@
     <string name="ktv_sound_preset_type">预设音效</string>
     <string name="ktv_sound_preset_off">关闭</string>
     <string name="ktv_highlight_disable">人声突出已失效</string>
+    <string name="ktv_highlight_limit">每首歌仅可设置一次人声突出对象，请在下首歌再设置</string>
 
+    <string name="ktv_debug_settings">开发者设置</string>
+    <string name="ktv_debug_settings_scoring_difficulty">打分难度</string>
+    <string name="ktv_debug_settings_scoring_compensation">打分补偿</string>
+    <string name="ktv_debug_settings_private_param">私有参数</string>
+    <string name="ktv_debug_settings_set">设置</string>
+    <string name="ktv_debug_settings_audio_dump">音频Dump</string>
 </resources>
