--- a/Android/scenes/ktv_singbattle/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/values-zh/strings.xml
@@ -112,6 +112,7 @@
     <string name="ktv_singbattle_voice_effect">音效</string>
     <string name="ktv_singbattle_camera">摄像头</string>
     <string name="ktv_singbattle_leave_chorus">退出合唱</string>
+    <string name="ktv_singbattle_seat_num">%s号麦</string>
 
     <!--    Content Description-->
     <string name="ktv_singbattle_toggle_mic">麦克风启用或静音</string>
@@ -143,5 +144,17 @@
     <string name="ktv_singbattle_game_room_owner_choosing_song">房主点歌中，游戏即将开始</string>
     <string name="ktv_singbattle_game_start">嗨唱开始</string>
     <string name="ktv_singbattle_game_nobody_grasp">本轮无人演唱 \n 即将播放下一首</string>
+    <string name="ktv_singbattle_too_fast">操作太频繁</string>
+    <string name="ktv_singbattle_at_least_four">至少需要4首歌才能开始游戏</string>
+    <string name="ktv_singbattle_song_is_enough">歌曲已满， 开始游戏吧</string>
+    <string name="ktv_singbattle_gaming_seat_tip1">正在游戏中，游戏结束后方可踢人下麦</string>
+    <string name="ktv_singbattle_gaming_seat_tip2">正在游戏中，游戏结束后方可下麦</string>
+    <string name="ktv_singbattle_gaming_seat_tip3">游戏进行中，请在下局游戏开始前上麦</string>
 
+    <string name="ktv_singbattle_debug_settings">开发者设置</string>
+    <string name="ktv_singbattle_debug_settings_scoring_difficulty">打分难度</string>
+    <string name="ktv_singbattle_debug_settings_scoring_compensation">打分补偿</string>
+    <string name="ktv_singbattle_debug_settings_private_param">私有参数</string>
+    <string name="ktv_singbattle_debug_settings_set">设置</string>
+    <string name="ktv_singbattle_debug_settings_audio_dump">音频Dump</string>
 </resources>
