[Feat] update home index fragment text

--- a/Android/app/src/main/res/values-zh/strings.xml
+++ b/Android/app/src/main/res/values-zh/strings.xml
@@ -50,7 +50,7 @@
     <string name="app_home_scene_voice_spatial_tips">方位感和空间感</string>
     <string name="app_home_scene_live_show">秀场</string>
     <string name="app_home_scene_live_show_tips">高清流畅人更美</string>
-    <string name="app_home_scene_live_pure1v1">纯1v1私密房</string>
+    <string name="app_home_scene_live_pure1v1">1v1私密房</string>
     <string name="app_home_scene_live_pure1v1_tips">秒接通&amp;秒出图</string>
     <string name="app_home_scene_live_multiplayer">多人团战</string>
     <string name="app_home_scene_live_multiplayer_tips">敬请期待</string>
