--- a/iOS/AgoraEntScenarios/Resource/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Resource/zh-Hans.lproj/Localizable.strings
@@ -168,7 +168,7 @@
 "home_content_item_ktv_title_snatchsinging" = "抢唱";
 "home_content_item_ktv_desc_snatchsinging" = "热歌高潮片段";
 "home_content_item_ktv_title_cantata" = "大合唱";
-"home_content_item_ktv_desc_cantata" = "最高支持128人";
+"home_content_item_ktv_desc_cantata" = "敬请期待";
 "home_content_item_ktv_title_takesong" = "接唱";
 "home_content_item_ktv_desc_takesong" = "歌曲接龙";
 "home_content_item_voice_desc_immersive" = "更沉浸、更有趣、更动听";
