--- a/Android/scenes/voice/src/main/res/values/strings.xml
+++ b/Android/scenes/voice/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="voice_random">随机</string>
     <string name="voice_room_name_hint">填写房间名称，吸引更多观众</string>
     <string name="voice_please_input_4_pwd">请设置4位数房间密码</string>
-    <string name="voice_room_pwd">房间密码</string>
+    <string name="voice_room_pwd">房间加密</string>
     <string name="voice_create_room_tips">本应用为测试产品，仅用于功能体验，请勿商用。单次使用时长不超过20分钟，过时房问将自动解散。为配合相关部门监管要求，严禁色情、辱骂、暴恐、涉政等违规内容。警惕电信诈骗，请勿在使用过程中进行货款申请和网银转账！国家反诈专用号码：96110</string>
     <string name="voice_please_input_room_name">请输入房间名称</string>
     <string name="voice_room_create_go_live">Go Live</string>
