--- a/Android/app/src/main/res/values-zh/strings.xml
+++ b/Android/app/src/main/res/values-zh/strings.xml
@@ -84,6 +84,7 @@
     <string name="app_mobile_number">手机号</string>
     <string name="app_v_code">验证码</string>
     <string name="app_plus_86">+86</string>
+
     <string name="app_logout_account">退出登录</string>
     <string name="app_logoff_account">注销账号</string>
     <string name="app_logoff_account_tips">注销后，您将无法使用当前账号体验我们的服务，请谨慎考虑</string>
@@ -133,20 +134,20 @@
     <string name="app_voice_chat_spatial">空间音频</string>
     <string name="app_voice_chat_spatialTip">—空间音频模式</string>
     <string name="app_sing_relay">抢麦接唱</string>
-    <string name="app_about_app">关于声动互娱</string>
-    <string name="app_about_name">声动互娱</string>
-    <string name="app_about_version">版本号</string>
-    <string name="app_about_scene_version">场景版本号</string>
-    <string name="app_about_chat_room">语聊房</string>
-    <string name="app_about_chat_room_spatial">语聊房-空间音频模式</string>
-    <string name="app_about_karaoke">在线K歌</string>
-    <string name="app_about_show">秀场直播</string>
-    <string name="app_about_singbattle">嗨歌抢唱</string>
-    <string name="app_about_pure1v1">1v1私密房</string>
-    <string name="app_about_customer_service">联系客服</string>
-    <string name="app_about_official_website">官网地址</string>
-    <string name="app_about_phone_cancel">取消</string>
-    <string name="app_mine_current_version">当前版本号：%s</string>
+    <string name="app_about_app">About us</string>
+    <string name="app_about_name">Agora Social Entertainment</string>
+    <string name="app_about_version">version number</string>
+    <string name="app_about_scene_version">Scene version number</string>
+    <string name="app_about_chat_room">Chat Room</string>
+    <string name="app_about_chat_room_spatial">Chat Room SA Mode</string>
+    <string name="app_about_karaoke">Karaoke</string>
+    <string name="app_about_show">Show</string>
+    <string name="app_about_singbattle">SingBattle</string>
+    <string name="app_about_pure1v1">1v1PrivateVideoChat</string>
+    <string name="app_about_customer_service">Customer Service</string>
+    <string name="app_about_official_website">Official Website</string>
+    <string name="app_about_phone_cancel">Cancel</string>
+    <string name="app_mine_current_version">Version %s</string>
 
     <string name="app_debug_open">Debug模式已打开</string>
     <string name="app_debug_off">Debug模式已关闭</string>
@@ -161,5 +162,6 @@
     <string name="app_vcode_send_success_tip">验证码发送成功</string>
     <string name="app_vcode_send_failed_tip">验证码发送失败</string>
     <string name="app_edit_success">修改成功</string>
+
 
 </resources>
