--- a/Android/scenes/show/src/main/res/values/strings.xml
+++ b/Android/scenes/show/src/main/res/values/strings.xml
@@ -9,10 +9,10 @@
     <string name="show_live_top_close">Close</string>
     <string name="show_live_bottom_chat">Let\'s Chat</string>
     <string name="show_live_perms_leak_tip" >缺少直播需要的权限，是否重新申请？</string>
-    <string name="show_live_yes">Yes</string>
-    <string name="show_live_no">No</string>
+    <string name="show_live_yes">是</string>
+    <string name="show_live_no">否</string>
     <string name="show_text_input_sent">发送</string>
-    <string name="show_text_input_hint">请输入...</string>
+    <string name="show_text_input_hint">请输入…</string>
     <string name="show_text_input_empty">文本为空</string>
     <string name="show_setting_switch_camera">翻转镜头</string>
     <string name="show_setting_video_on">摄像头开</string>
@@ -125,8 +125,8 @@
     <string name="show_empty_onseat_apply">暂无上麦申请</string>
     <string name="show_apply_onseat">申请连麦</string>
     <string name="show_stop_linking">结束</string>
-    <string name="show_cancel_linking">撤回连麦</string>
     <string name="show_linking">正在连麦</string>
+    <string name="show_cancel_linking">撤回连麦</string>
     <string name="show_is_onseat">已上麦</string>
     <string name="show_reject_onseat">已拒绝</string>
     <string name="show_audience_settings">观众设置</string>
@@ -148,9 +148,13 @@
     <string name="show_stop_pking">结束</string>
     <string name="show_empty_online_boardcaster">暂无在线主播</string>
     <string name="show_empty_online_audience">暂无在线观众</string>
+    <string name="show_setting_preset">预设</string>
     <string name="show_pk">连线互动</string>
     <string name="show_pk_dialog_header">对主播%s</string>
     <string name="show_can_pk">可邀请PK</string>
+    <string name="show_pk_is_stopped">PK已断开哦</string>
+    <string name="show_content">监测到当前内容存在违规行为</string>
+    <string name="show_come_soon">Hi，我暂时有事，很快回来…</string>
 
     <string name="show_cannot_accept">正在互动， 请互动结束后再接受连麦申请</string>
     <string name="show_cannot_invite">正在互动， 请互动结束后再邀请观众连麦</string>
@@ -158,12 +162,7 @@
     <string name="show_ask_for_link">主播 %s 邀请你加入连麦</string>
     <string name="show_ask_for_pk">主播 %s 邀请你视频连线</string>
     <string name="show_count_time_for_pk">PK 0%s:%s</string>
-    <string name="show_pk_is_stopped">PK已断开哦</string>
-    <string name="show_content">监测到当前内容存在违规行为</string>
-    <string name="show_come_soon">Hi，我暂时有事，很快回来…</string>
 
-
-    <string name="show_setting_preset">预设</string>
     <string name="show_setting_advance_video_setting">视频设置</string>
     <string name="show_setting_advance_audio_setting">音频设置</string>
     <string name="show_setting_advance_quality_enhance">超分</string>
@@ -246,7 +245,7 @@
     <string name="show_network_quailty">目标观众的网络状况</string>
     <string name="show_network_quailty_tips">针对目标投放地区的网络状况的视频策略</string>
     <string name="show_network_quailty_good">较好</string>
-    <string name="show_network_quailty_good_tag">网络状况稳定通畅</string>
+    <string name="show_network_quailty_good_tag">网络状况稳定流畅</string>
     <string name="show_network_quailty_normal">不稳定</string>
     <string name="show_network_quailty_normal_tag">网络状况不通畅</string>
     <string name="show_video_quailty">画质</string>
@@ -277,5 +276,4 @@
         <item>1.5倍超分</item>
         <item>2 倍超分</item>
     </string-array>
-
 </resources>
