--- a/iOS/AgoraEntScenarios/Scenes/Pure1v1/Pure1v1/Resources/Pure1v1.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/Pure1v1/Pure1v1/Resources/Pure1v1.bundle/zh-Hans.lproj/Localizable.strings
@@ -28,6 +28,9 @@
 "call_toast_hangup"="对方结束连线";
 "call_toast_reject"="对方已拒绝";
 
+"report_room" = "举报";
+"report_room_success" = "举报成功";
+
 "call_content_inspect_warning"="监测到当前内容存在违规行为";
 
 "setting_statistic" = "实时数据";
