[Android]fix about us activity

--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -135,20 +135,21 @@
     <string name="app_voice_chat_spatial">空间音频</string>
     <string name="app_voice_chat_spatialTip">—空间音频模式</string>
     <string name="app_sing_relay">抢麦接唱</string>
-    <string name="app_about_app">About us</string>
-    <string name="app_about_name">Agora Social Entertainment</string>
-    <string name="app_about_version">version number</string>
-    <string name="app_about_scene_version">Scene version number</string>
-    <string name="app_about_chat_room">Chat Room</string>
-    <string name="app_about_chat_room_spatial">Chat Room SA Mode</string>
-    <string name="app_about_karaoke">Karaoke</string>
-    <string name="app_about_show">Show</string>
-    <string name="app_about_singbattle">SingBattle</string>
-    <string name="app_about_pure1v1">1v1PrivateVideoChat</string>
-    <string name="app_about_customer_service">Customer Service</string>
-    <string name="app_about_official_website">Official Website</string>
-    <string name="app_about_phone_cancel">Cancel</string>
-    <string name="app_mine_current_version">Version %s</string>
+    <string name="app_about_app">关于声动互娱</string>
+    <string name="app_about_name">声动互娱</string>
+    <string name="app_about_version">版本号</string>
+    <string name="app_about_scene_version">场景版本号</string>
+    <string name="app_about_chat_room">语聊房</string>
+    <string name="app_about_chat_room_spatial">语聊房-空间音频模式</string>
+    <string name="app_about_karaoke">在线K歌</string>
+    <string name="app_about_show">秀场直播</string>
+    <string name="app_about_singbattle">嗨歌抢唱</string>
+    <string name="app_about_pure1v1">1v1私密房</string>
+    <string name="app_about_showTo1v1">秀场转1v1私密房</string>
+    <string name="app_about_customer_service">联系客服</string>
+    <string name="app_about_official_website">官网地址</string>
+    <string name="app_about_phone_cancel">取消</string>
+    <string name="app_mine_current_version">当前版本号：%s</string>
 
     <string name="app_debug_open">Debug模式已打开</string>
     <string name="app_debug_off">Debug模式已关闭</string>
