[iOS] fix voice room ui

--- a/iOS/AgoraEntScenarios/Scenes/SpatialAudio/SpatialAudioResource.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/SpatialAudio/SpatialAudioResource.bundle/zh-Hans.lproj/Localizable.strings
@@ -7,7 +7,7 @@
 */
 "spatial_voice_app_name"="声网语聊房-空间音频模式";
 "spatial_voice_app_all"="全部";
-"spatial_voice_chat_room"="语聊房-空间音频模式";
+"spatial_voice_chat_room"="空间音频语聊房";
 "spatial_voice_audio_mode_room"="空间音频房";
 "Spatial_voice_private"="私密";
 "spatial_voice_enter"="进入";
