--- a/iOS/AgoraEntScenarios/Resource/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Resource/zh-Hans.lproj/Localizable.strings
@@ -71,6 +71,8 @@
 "app_about_chat_room"="语聊房";
 "app_about_chat_room_spatial"="语聊房-空间音频模式";
 "app_about_karaoke"="在线K歌";
+"app_about_hiSong"="嗨歌抢唱";
+"app_about_continuesinging"="抢麦接唱";
 "app_about_show"="秀场直播";
 "app_about_1v1"="1v1私密房";
 "app_about_live_to_1v1"="秀场转1v1私密房";
