--- a/iOS/AgoraEntScenarios/Scenes/Pure1v1/Pure1v1/Resources/Pure1v1.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/Pure1v1/Pure1v1/Resources/Pure1v1.bundle/zh-Hans.lproj/Localizable.strings
@@ -28,6 +28,8 @@
 "call_toast_hangup"="对方结束连线";
 "call_toast_reject"="对方已拒绝";
 
+"call_toast_disconnect"="连接中断，重连中...";
+
 "report_room" = "举报";
 "report_room_success" = "举报成功";
 
