--- a/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/en.lproj/Localizable.strings
@@ -38,9 +38,10 @@
 "user_list_cell_local_user"="本人信息";
 "user_list_cell_remote_user"="对端信息";
 
+"call_toast_disconnect"="连接中断，重连中...";
+
 "report_room" = "举报";
 "report_room_success" = "举报成功";
-
 
 "show_statistic_bitrate" = "码率";
 "show_statistic_delay" = "延迟";
