--- a/Android/scenes/voice_spatial/src/main/res/values/strings.xml
+++ b/Android/scenes/voice_spatial/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="voice_spatial_app_name">声网语聊房</string>
     <string name="voice_spatial_app_agora_chatroom">声网语聊房</string>
     <string name="voice_spatial_app_agora_chatroom_copy_right">Powered by Agora.io</string>
+    <string name="voice_spatial_chat_room_list_tips">欢迎来到声网语聊房！\n搭载声网最佳音效实践、最新音频技术的语聊房\n带来更沉浸、更易用、更有趣的语聊体验</string>
     <string name="voice_spatial_room_list_title_name">空间音频语聊房</string>
     <string name="voice_spatial_tab_layout_all">全部</string>
     <string name="voice_spatial_room_disclaimer">免责声明</string>
