--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -57,7 +57,7 @@
     <string name="app_home_scene_live_show1v1">秀场转1v1\n私密房</string>
     <string name="app_home_scene_live_show1v1_tips">秒转场&amp;秒接通</string>
 
-    <string name="app_title_home">首页</string>
+    <string name="app_title_home">玩法</string>
     <string name="app_title_find">发现</string>
     <string name="app_title_mine">我的</string>
     <string name="app_action_settings">设置</string>
