--- a/iOS/AgoraEntScenarios/Resource/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Resource/zh-Hans.lproj/Localizable.strings
@@ -7,7 +7,7 @@
 */
 
 "app_name"="声动互娱";
-"app_title_home"="首页";
+"app_title_home"="玩法";
 "app_title_find"="发现";
 "app_title_mine"="我的";
 "app_action_settings"="设置";
