--- a/Android/scenes/ktv/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/ktv/src/main/res/values-zh/strings.xml
@@ -146,7 +146,7 @@
     <string name="ktv_onseat_toast">加入合唱前，您需要先上麦</string>
     <string name="ktv_load_failed_no_song">"歌曲下载失败，当前已无歌曲"</string>
     <string name="ktv_load_failed">歌曲下载失败</string>
-    <string name="ktv_try">已尝试三次，请自动切歌</string>
+    <string name="ktv_try">已尝试三次，请手动切歌</string>
     <string name="ktv_load_failed_another_song">"歌曲下载失败，当前已切换到另一首歌"</string>
     <string name="ktv_too_fast">操作太频繁</string>
     <string name="ktv_lrc_failed">歌词加载失败</string>
