--- a/Android/scenes/ktv_singbattle/src/main/res/values/strings.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/values/strings.xml
@@ -157,4 +157,5 @@
     <string name="ktv_singbattle_debug_settings_private_param">私有参数</string>
     <string name="ktv_singbattle_debug_settings_set">设置</string>
     <string name="ktv_singbattle_debug_settings_audio_dump">音频Dump</string>
+    <string name="ktv_singbattle_try">已尝试三次，请手动切歌</string>
 </resources>
