fix: update localized string

--- a/iOS/AgoraEntScenarios/Scenes/SpatialAudio/SpatialAudioResource.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/SpatialAudio/SpatialAudioResource.bundle/zh-Hans.lproj/Localizable.strings
@@ -5,6 +5,7 @@
   Created by 朱继超 on 2022/9/19.
   
 */
+"voice_agora_name"="声网";
 "spatial_voice_app_name"="声网语聊房-空间音频模式";
 "spatial_voice_app_all"="全部";
 "spatial_voice_chat_room"="空间音频语聊房";
