[Android] fix ui bugs

--- a/Android/scenes/voice/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/voice/src/main/res/values-zh/strings.xml
@@ -188,7 +188,7 @@
     <string name="voice_chatroom_gaming_buddy_introduce">该⾳效专注于解决主播陪玩游戏场景⾥各类问题，包括⼈声和游戏声⾳的协同混响处理，声⾳的曲调和声线美化等。能够让陪玩主播的声⾳更具吸引⼒，同时保证游戏声⾳的场景感。</string>
     <string name="voice_chatroom_professional_broadcaster">专业⾳频主播</string>
     <string name="voice_chatroom_professional_broadcaster_introduce">该⾳效专注于解决单声道主播⾳质差和主流外置声卡兼容等问题。利⽤声⽹⽴体声采集和⾼⾳质技术能够将使⽤声卡的主播的⾳质⼤幅提升，提升直播间吸引⼒，⽬前已适配市场上主流声卡。</string>
-    <string name="voice_chatroom_sound_selection_more">获取更多最佳音效，请访问 <![CDATA[<font color=\'#3C4267\'><strong><u>www.agora.io.</u></strong></font>]]></string>
+    <string name="voice_chatroom_sound_selection_more">获取更多最佳音效，请访问 <![CDATA[<font color=\'#3C4267\'><strong><u>www.shengwang.cn</u></strong></font>]]></string>
     <string name="voice_chatroom_ains_settings">AI降噪设置</string>
     <string name="voice_chatroom_your_ains">你自己</string>
     <string name="voice_chatroom_agora_blue_bot_ains">声网小蓝</string>
